# code-onboard

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/code_onboard/: __init__.py  __main__.py  cli.py  config.py  pipeline.py
src/code_onboard/analysis/: entry_points.py  graph.py  hotspots.py  reading_order.py
src/code_onboard/discovery/: file_walker.py  language_detect.py
src/code_onboard/generation/: html.py  markdown.py  mermaid.py
src/code_onboard/llm/: anthropic_adapter.py  base.py  context.py  openai_adapter.py  prompts.py
src/code_onboard/parsing/: models.py  parser_pool.py
src/code_onboard/parsing/extractors/: base.py  csharp_extractor.py  python_extractor.py  ts_extractor.py
tests/: test_entry_points.py  test_extractors.py  test_file_walker.py  test_graph.py  test_hotspots.py  test_mermaid.py
tests/fixtures/python_sample/: main.py  models.py  utils.py
tests/fixtures/ts_sample/: config.ts  index.ts
tests/fixtures/ts_sample/services/: userService.ts
