[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "code-onboard"
version = "1.0.0"
description = "Analyze any git repo and generate a newcomer-friendly ONBOARDING.md guide"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Fatima Malbari" }]
keywords = ["onboarding", "codebase", "ast", "tree-sitter", "documentation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-c-sharp>=0.23",
    "click>=8.0",
    "httpx>=0.27",
    "pathspec>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
code-onboard = "code_onboard.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
